Added Parameter handling

--- a/Javascript/public/index.html
+++ b/Javascript/public/index.html
@@ -10,7 +10,7 @@
   <title>Lenia3D</title>
   
   <!-- Global styles (external CSS or frameworks) -->
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
 </head>
 <body>
   <!-- Root container for React app -->
